eagle_test/error/custom_equals_error.eagle
class A {
    def equals(o) {
        return this == o;
    }
}
print A() == A();
// expected: [RuntimeError] Maximum recursion depth exceeded